# falach

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
crates/falach-agent/: Cargo.toml
crates/falach-agent/src/: main.rs
crates/falach-api/: Cargo.toml
crates/falach-api/src/: dto.rs  error.rs  event.rs  lib.rs
crates/falach-api/src/api/: session.rs
crates/falach-api/tests/: us_090_dto_fidelity.rs  us_091_session_lifecycle.rs
crates/falach-api/tests/common/: mod.rs
crates/falach-cli/: Cargo.toml
crates/falach-cli/examples/: gen_completions.rs
crates/falach-cli/src/: agent.rs  cli.rs  exit.rs  format.rs  lib.rs  main.rs  prompt.rs
crates/falach-cli/src/commands/: completions.rs  entry.rs  gen.rs  keys.rs  mod.rs  ssh.rs  sync.rs  vault.rs
crates/falach-cli/src/views/: entry.rs  gen.rs  mod.rs  sync.rs  vault.rs
crates/falach-cli/tests/: cli_clipboard_handoff.rs  cli_completions.rs  cli_entry.rs  cli_exit_codes.rs  cli_gen.rs  cli_help.rs  cli_json_schemas.rs  cli_master_password.rs  cli_set_sync.rs  cli_sync.rs  cli_sync_minio.rs  cli_vault.rs
crates/falach-cli/tests/common/: mod.rs
crates/falach-core/: Cargo.toml
crates/falach-core/benches/: bench_search.rs  vault_open.rs
crates/falach-core/examples/: seed_demo_vault.rs
crates/falach-core/src/: atomic.rs  error.rs  lib.rs  locking.rs  paths.rs  registry.rs  secret.rs  unlock.rs  vault.rs
crates/falach-core/src/entry/: attachment.rs  builder.rs  crud.rs  fuzzy.rs  group.rs  mod.rs  search.rs  types.rs  view.rs
crates/falach-core/tests/: fixtures_smoke.rs  keepassxc_smoke.rs  random_round_trip.rs  us_001_create_vault.rs  us_002_refuse_overwrite.rs  us_003_open_correct_password.rs  us_004_open_wrong_password.rs  us_005_multiple_vaults.rs  us_006_change_master_password.rs  us_007_delete_registration.rs  us_010_add_credential.rs  us_011_uuid_stable.rs  us_012_totp_entry.rs  us_013_attachment.rs  us_014_edit_preserves_history.rs  us_015_search.rs  us_016_groups.rs  us_017_delete_entry.rs  us_018_expired_entries.rs  us_054_atomic_write_fault_injection.rs  us_055_concurrent_writers.rs  vault_api_additions.rs
crates/falach-core/tests/common/: entry_fixtures.rs  mod.rs
crates/falach-genpw/: Cargo.toml
crates/falach-genpw/LICENSES/: EFF-wordlist.md
crates/falach-genpw/src/: error.rs  lib.rs  password.rs
crates/falach-genpw/tests/: distribution.rs  us_020_random_default.rs  us_021_random_custom.rs  us_022_no_ambiguous.rs  us_023_diceware.rs
crates/falach-security/: Cargo.toml
crates/falach-security/src/: auto_lock.rs  clipboard.rs  clock.rs  error.rs  harden.rs  lib.rs  secret.rs  vault_lock.rs
crates/falach-security/src/os_events/: logind.rs  macos.rs  mod.rs
crates/falach-security/tests/: us_051_idle_auto_lock.rs  us_053_clipboard_autoclear.rs
crates/falach-security/tests/common/: clock.rs  mod.rs
crates/falach-security/tests/fixtures/: vaults_with_lock_override.toml
crates/falach-sync/: Cargo.toml  README.md
crates/falach-sync/docs/: backend-conformance.md
crates/falach-sync/src/: activity.rs  backup.rs  config.rs  error.rs  lib.rs  sync.rs  sync_log.rs
crates/falach-sync/src/auth/: env.rs  envvars.rs  error.rs  iam.rs  mod.rs  profile.rs  rstcred1.rs  source.rs
crates/falach-sync/src/merge/: mod.rs
crates/falach-sync/src/s3/: client.rs  endpoint.rs  error.rs  etag.rs  http.rs  mod.rs  signer.rs  testing.rs
crates/falach-sync/src/transport/: memory.rs  mod.rs  s3.rs
crates/falach-sync/tests/: fault_injection.rs  merge_property_tests.rs  merge_semantics.rs  minio_integration.rs  sigv4_aws_test_vectors.rs  us_040_configure_target.rs  us_041_fast_replace_open.rs  us_042_conditional_put.rs  us_043_disjoint_merge.rs  us_044_collision_merge.rs  us_045_sync_failure.rs  us_046_transport_trait.rs
crates/falach-sync/tests/common/: minio_env.rs  mod.rs  sync_env.rs
crates/falach-sync/tests/data/: AWS_SIGV4_VECTORS_SOURCE.md
crates/falach-tui/: Cargo.toml
crates/falach-tui/src/: app.rs  args.rs  clipboard.rs  config.rs  error.rs  event.rs  jump_history.rs  lib.rs  main.rs  recents.rs  snapshot_tests.rs  sync_runtime.rs  tabs.rs  terminal_guard.rs  theme.rs  user_config.rs  util.rs
crates/falach-tui/src/command/: keymap.rs  mod.rs  registry.rs
crates/falach-tui/src/overlay/: bulk.rs  edit.rs  generate.rs  history.rs  mod.rs  palette.rs  search.rs  sync_config.rs
crates/falach-tui/src/screens/: lock_screen.rs  mod.rs  secrets.rs  settings.rs  unlock_list.rs  unlock_prompt.rs  workspace.rs
crates/falach-tui/src/widgets/: entry_detail.rs  entry_tree.rs  hint_bar.rs  lock_countdown.rs  mod.rs  password_input.rs  status_bar.rs  text_area.rs  which_key.rs
crates/falach-tui/tests/snapshots/: confirm_quit.txt  hint_bar_secrets_tree.txt  palette_filtered.txt  palette_top.txt  search_overlay_narrow.txt  secrets_detail_custom_fields.txt  secrets_detail_scrolled.txt  secrets_detail_top.txt  secrets_tree.txt  secrets_tree_marked.txt  settings_tab.txt  tabbar.txt  which_key_g_prefix.txt
shell-completions/: _falach  falach.bash  falach.fish
test-vaults/: demo.kdbx
tools/bench/: bench_search_gate.sh
tools/dev/: fetch-sigv4-corpus.sh  install-toolchain.sh  update-snapshots.sh
tools/interop-tests/: README.md  entry_us-010.sh  entry_us-012.sh  entry_us-013.sh  entry_us-014.sh  entry_us-016.sh  entry_us-018.sh  sync_us-044.sh  us_090_rust_to_kpxc.sh  us_091_kpxc_to_rust.sh  us_092_round_trip.sh
tools/sync-tests/: README.md
tools/sync-tests/fixtures/: MINIO_VERSION.md  make_bucket.sh  start_minio.sh  stop_minio.sh
