[package]
name = "falach-agent"
description = "Falach optional unlock agent (placeholder; implemented by the agent feature, may not ship MVP)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
