[package]
name = "falach-tui"
description = "Falach interactive terminal UI (placeholder; implemented by the tui-skeleton feature)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# First-party (workspace path deps).
falach-core = { path = "../falach-core", version = "0.1" }
# Real sync engine. The TUI consumes `falach_sync::Sync` directly (the
# abandoned `sync-git` placeholder is gone); `TuiError` bridges
# `falach_sync::SyncError` via `#[from]` (design U.5 / ADR-T4).
falach-sync = { path = "../falach-sync", version = "0.1" }
# Auto-lock + clipboard. Phase 2 wires `AutoLockController` (idle auto-lock,
# FR-073); `Clipboard`/`AutoClearGuard` come online with copy actions in Phase 5.
falach-security = { path = "../falach-security", version = "0.1" }
# Password / passphrase generation for the Phase-5 EditظْGenerate panel (T5.3).
# First-party path dep; pulls no new vendored crates (its deps are already in
# the tree).
falach-genpw = { path = "../falach-genpw", version = "0.1" }

# --- TUI framework + terminal backend (tui-skeleton T1.1) ---
# Pins are the latest stable published ظëح30 days as of 2026-06-01 (OQ-1):
# ratatui 0.30.0 (2025-12-26), crossterm 0.29.0 (2025-04-05),
# tui-input 0.15.3 (2026-04-18), unicode-width 0.2.2 (2025-10-06).
# ratatui 0.30's default features include the crossterm 0.29 backend;
# `crossterm` is declared directly for the raw-mode / alternate-screen calls
# in `terminal_guard` and the `KeyEvent`/`KeyCode`/`KeyModifiers` types in
# `keys`. Both resolve to a single crossterm 0.29 in the tree.
#
# We use ratatui's default features. Trimming them was evaluated and rejected:
# the only default that pulls extra crates is `all-widgets` ظْ `widget-calendar`
# ظْ `time`, but `ratatui-widgets` also pulls `time` via its `std` feature
# (`std = ["time/local-offset"]`), which any usable build enables ظ¤ so dropping
# `all-widgets` removes zero crates (verified: compiled set unchanged). Not
# worth the `default-features = false` + curated-list fragility for no gain.
ratatui = "0.30"
crossterm = "0.29"
# Input-widget primitive for the Phase-2 `PasswordInput` / search / edit
# fields. The `crossterm` feature is enabled so the full tree is vendored once
# (Phase 2 wires `Input::handle_event`). 0.15.3 targets crossterm 0.29 +
# ratatui 0.30 + unicode-width 0.2.
tui-input = { version = "0.15", features = ["crossterm"] }
# Display-width-correct tab-label / detail truncation (Phase 2 T2.4 / OQ-N6).
unicode-width = "0.2"
# Entry/group UUIDs ظ¤ pinned-tab identity (`TabBar.pinned`) and (Phase 3+)
# tree/detail selection. Re-uses falach-core's exact-pinned uuid. The `serde`
# feature (Phase 4 / T4.1) lets pinned + recents UUIDs round-trip through
# `tui.toml`; it matches `falach-core`'s own `uuid` features, so it adds zero
# new vendored crates.
uuid = { version = "1", features = ["serde"] }
# Timestamps. `falach-core`'s public API surfaces `chrono::DateTime<Utc>`
# (`EntryView::{creation_time,last_modification_time,expires}`), and the detail
# pane needs `Utc::now()` to call `Vault::is_expired(uuid, now)` (Phase 3 / T3.3).
# Already vendored as a `falach-core` transitive, so this adds zero new crates;
# `default-features = false, features = ["clock"]` matches core and keeps it lean.
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# TUI-local persistence (`config.toml`: preferences; `tui.toml`: per-vault
# pins/recents; Phase 4 / ADR-T3). Serialized with `serde` + `toml` (both already vendored workspace-
# wide via falach-core) and written through `falach_core::atomic::write_atomic`.
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Memory hygiene + error/exit plumbing (already vendored workspace-wide).
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
anyhow = "1"

# Async-signal-safe SIGHUP/SIGTERM terminal-restore handler (T1.3). Unix-only;
# the single audited `#[allow(unsafe_code)]` block in this crate ظ¤ see the
# "Signals" block in `terminal_guard.rs`. Mirrors the `falach-security`
# posture (`deny(unsafe_code)` crate-wide + one audited module).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Unlock/lock state-machine tests build a real fast-KDF KDBX fixture in a
# tempdir and register it in an in-memory `VaultRegistry`. (`toml` for the
# `RegisteredVault::extra` table is now a regular dependency above.)
tempfile = "3"
